<resources>
    <string name="app_name">Activity Sync</string>

    <!-- WelcomeScreen strings -->
    <string name="btn_message_home_screen">Show simple message</string>
    <string name="btn_open_dummy">Open Dummy Screen</string>

    <!-- Navigation menu strings -->
    <string name="menu_events">All events</string>
    <string name="menu_my_events">My events</string>
    <string name="menu_profile">User Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="menu_log_out">Log out</string>

    <!-- LoginScreen strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="err_login">Wrong password or email, try again.</string>
    <string name="txt_suname_app">sport events organizer app</string>

    <!-- EventsScreen strings -->
    <string name="title_events">Available events</string>

    <!-- Other errors strings -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Other strings -->
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <!-- EventsScreen strings -->
    <string name="repository_events_error">Error! Cannot load events… Check your internet connection and try again</string>

    <!-- EventDetailsScreen strings -->
    <string name="repository_event_details_error">Error! Cannot load details of this event… Check your internet connection and try again</string>
    <string name="title_event_details">Event details</string>
</resources>
