<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_events"
            android:title="@string/menu_events"/>

        <item
            android:id="@+id/menu_my_events"
            android:title="@string/menu_my_events"/>

        <item
            android:id="@+id/menu_profile"
            android:title="@string/menu_profile"/>
    </group>

    <group
        android:id="@+id/group_information"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/menu_faq"
            android:title="@string/menu_faq"/>

        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"/>
    </group>

    <group
        android:id="@+id/group_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_log_out"/>
    </group>



</menu>
